--- a/css/main.css
+++ b/css/main.css
@@ -3,3 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+header{
+    height: 70vh;
+    background: rgba(0,0,0,0.8);
+    position: relative;
+}
+header::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-image: url(../images/bgs/bg1.jpg);
+    background-size: cover;
+}
