--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,8 @@ header::before{
     top: 100px;
     left: 50%;
     transform: translateX(-50%);
-    background: #fff;
+    border:2px solid #fff;
+    border-radius: 10px;
     list-style: none;
     padding: 20px;
     display: none;
