--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,17 @@
+:root{
+    --color1: #238733;
+    --color2: #87CBF5;
+    --color3: #439BEF;
+    --color4: #0062C3;
+    --color5: #013068; 
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+a,a:hover{
+    text-decoration: none;
 }
 html{
     scroll-behavior: smooth;
@@ -12,11 +22,13 @@ html{
     right: 20px;
     width: 40px;
     height: 40px;
-    border: 2px solid #f18219;
+    border: 2px solid var(--color3);
+    color: var(--color3);
     border-radius: 50%;
-    text-align: center;
-    line-height: 40px;
+    display: grid;
+    place-items: center;
     text-decoration: none;
+    z-index: 9999;
 }
 /*  Start Header  */
 header{
@@ -33,30 +45,37 @@ header::before{
     background-image: url(../images/bgs/bg1.jpg);
     background-size: cover;
 }
-.logo{
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    width: 80px;
+.sticky-nav{  
     height: 80px;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    padding: 5px;
-    z-index: 999;
-}
-.logo img{
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 25px;
+    top: 0;
+    left: 0;
     width: 100%;
-    border-radius: 50%;
+    z-index: 9999;
+    transition: all 0.5s;
 }
+.sticky-nav.colored{
+    background: rgba(0,0,0,0.8);
+}
+.logo{
+    padding: 6px 20px;
+    border: 2px solid var(--color3);
+    color: var(--color3);
+    border-radius: 10px;
+    text-align: center;
+    font-size: 1.3rem;
+}
+
 .menu-toggler{
     width: 40px;
     height: 30px;
-    position: absolute;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    top: 40px;
-    right:40px;
     cursor: pointer;
     z-index: 999;
 }
@@ -65,7 +84,7 @@ header::before{
 }
 .menu-toggler div{
     height: 2px;
-    background: #fff;
+    background: var(--color3);
 }
 .menu-toggler.opened div:nth-child(1){
     transform: rotate(46deg) translate(11px, 8px);
@@ -79,17 +98,18 @@ header::before{
 }
 
 .main-menu{
-    position: absolute;
-    top: 80px;
+    position: fixed;
+    top: 10px;
     left: 50%;
     transform: translateX(-50%);
-    border:2px solid #fff;
+    border:2px solid var(--color2);
     border-radius: 10px;
     list-style: none;
     padding: 20px;
     display: none;
     z-index: 999;
     background: rgba(0,0,0,0.98);
+    text-align: center;
 }
 .main-menu li{
     display: inline-block;
@@ -98,11 +118,12 @@ header::before{
 .main-menu li a{
     padding: 6px 15px;
     text-decoration: none;
-    color: #dedede;
+    color: var(--color2);
     letter-spacing: 3px;
 }
 @media(max-width:767px){
     .main-menu li{display: block;}
+    .main-menu{top:80px;width: 80%;text-align: center;}
 }
 .intro-text{
     position: absolute;
@@ -115,8 +136,20 @@ header::before{
 .intro-text h1{
     margin-bottom: 15px;
 }
+.intro-img{
+    width: 200px;
+    height: 100%;
+    margin: 25px auto;
+    padding: 10px;
+    border-radius: 50%;
+    border: 2px solid var(--color3);
+}
+.intro-img img{
+    width: 100%;
+    border-radius: 50%;
+}
 /*--- General in sections ---*/
 section{
     height: 100vh;
-    padding-top: 50px;
+    padding-top: 100px;
 }
